tests/compile-errors/SoANoParams.hxml
lib.hxml
-cp tests/compile-errors
-main SoANoParams
-js bin/compile-tests/SoANoParams.js
